Second section finished

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 
     <div class="second-section">
         <div class="second-title">
-            <h1>Some random information</h1>
+            <h2>Some random information</h2>
         </div>
         <div class="image-container">
-            <div class="first-image"></div>
-            <div class="second-image"></div>
-            <div class="third-image"></div>
-            <div class="fourth-image"></div>
+            <div class="first-image"> </div>
+            <div class="second-image">  </div>
+            <div class="third-image">  </div>
+            <div class="fourth-image">  </div>
         </div>
         <div class="text-container">
-            <div class="first-text"></div>
-            <div class="first-text"></div>
-            <div class="first-text"></div>
-            <div class="first-text"></div>
+            <div class="first-text"> this is some subtext under an illustration or image </div>
+            <div class="second-text"> this is some subtext under an illustration or image </div>
+            <div class="third-text"> this is some subtext under an illustration or image </div>
+            <div class="fourth-text"> this is some subtext under an illustration or image </div>
         </div>
 
     </div>
