--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
         </div>
 
     </div>
+
+    <div class="third-section">
+        <div class="quote">
+            This is an inspiring quote, or a testimonial from a customer.
+            Maybe it's just filling up sapce, or maybe people will actually read it.
+            Who knows? 
+            All I know is that it looks nice or maybe not.
+        </div>
+        <div class="author">
+            -Thor
+        </div>
+    </div>
     
 </body>
 </html>
