--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
             -Thor
         </div>
     </div>
+
+    <div class="fourth-section">
+        <div class="action-container">
+            <div class="content">
+                <h3 class="action-title"> Call to action! It's time!</h3>
+                <p class="action-text"> Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="action-button-container">
+                <button class="action-button">Sign up</button>
+            </div>
+        </div>
+        
+    </div>
     
 </body>
 </html>
