Project Finished (Footer done)

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
         </div>
         
     </div>
+
+    <div class="footer">
+        <p class="copyright"> Copyright The Oding Project 2021</p>
+    </div>
     
 </body>
 </html>
